--- a/css/style.css
+++ b/css/style.css
@@ -473,4 +473,103 @@ li {
   overflow-x: hidden;
   overflow-y: scroll;
 }
+
+.qts-sec,
+.testimoni-sec {
+  background-color: #f8f8f8;
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
+
+.qts-sec .container,
+.testimoni-sec .container {
+  position: relative;
+}
+
+.qts-sec .slick-cs-prev,
+.qts-sec .slick-cs-next,
+.qts-sec .slick-cs2-prev,
+.qts-sec .slick-cs2-next,
+.testimoni-sec .slick-cs-prev,
+.testimoni-sec .slick-cs-next,
+.testimoni-sec .slick-cs2-prev,
+.testimoni-sec .slick-cs2-next {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  background-color: transparent;
+  border: none;
+  color: #999999;
+  font-size: 22px;
+  z-index: 999;
+}
+
+.qts-sec .slick-cs-next,
+.qts-sec .slick-cs2-next,
+.testimoni-sec .slick-cs-next,
+.testimoni-sec .slick-cs2-next {
+  right: 0;
+}
+
+.qts-wrap,
+.testimoni-wrap {
+  position: relative;
+}
+
+.qts-icn span,
+.testimoni-icn span {
+  border: 3px solid #95e1d3;
+  width: 110px;
+  height: 110px;
+  display: inline-block;
+}
+
+.qts-icn i,
+.testimoni-icn i {
+  color: #95e1d3;
+  font-size: 40px;
+}
+
+.qts-cnt,
+.testimoni-cnt {
+  padding-left: 40px;
+  color: #999999;
+}
+
+.qts-cnt p,
+.testimoni-cnt p {
+  font-size: 16px;
+  line-height: 28px;
+  font-style: italic;
+}
+
+.qts-cnt h6,
+.testimoni-cnt h6 {
+  font-weight: bold;
+  color: #333333;
+  font-family: "Kaushan Script", cursive;
+  padding-left: 75px;
+  font-size: 20px;
+  margin-top: 5px;
+  line-height: 45px;
+  position: relative;
+}
+
+.qts-cnt h6:before,
+.testimoni-cnt h6:before {
+  content: "";
+  width: 60px;
+  height: 3px;
+  background-color: #f38181;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.testimoni-sec {
+  background-color: #ffffff;
+}
 /*# sourceMappingURL=style.css.map */
