--- a/css/style.scss
+++ b/css/style.scss
@@ -790,3 +790,377 @@ header {
     font-style: italic;
   }
 }
+
+// What people say section
+
+.wps-sec {
+  background-image: url(../images/hill-bg.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  padding-bottom: 0;
+
+  .sec-title,
+  .wps-cnt {
+    z-index: 99999;
+  }
+}
+
+.wps-sec::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(
+    red($color-white),
+    green($color-white),
+    blue($color-white),
+    0.8
+  );
+}
+
+.wps-singl-wrp {
+  margin-bottom: 70px;
+  .wps-sin-txt {
+    padding-left: 30px;
+  }
+  h6 {
+    font-size: 15px;
+    font-weight: 700;
+    text-transform: uppercase;
+  }
+  .ppl-title {
+    font-size: 14px !important;
+    font-style: italic;
+    color: $font-primary !important;
+    position: relative;
+    margin-top: 12px;
+  }
+
+  .ppl-title::after {
+    content: "";
+    width: 60px;
+    height: 3px;
+    background-color: $accent-color;
+    position: absolute;
+    bottom: -15px;
+    left: 0;
+  }
+
+  .ppl-des {
+    font-size: 13px !important;
+    line-height: 22px;
+    color: darken($font-secondary, 18%) !important;
+    margin-top: 30px;
+  }
+}
+
+//blog section customize
+
+.blog-singl-img {
+  position: relative;
+
+  .date {
+    list-style-type: none;
+    background-color: $color-green;
+    width: fit-content;
+    height: fit-content;
+    padding: 8px;
+    position: absolute;
+    bottom: 10px;
+    left: -10px;
+
+    li:nth-child(1) {
+      font-size: 28px;
+      line-height: 32px;
+      font-weight: 700;
+      color: $color-white;
+      font-family: "Roboto", sans-serif;
+    }
+    li:nth-child(2) {
+      color: $color-white;
+      font-style: italic;
+      font-size: 14px;
+      line-height: 18px;
+      font-family: "Roboto", sans-serif;
+    }
+  }
+}
+
+.blog-singl-wrp {
+  .blog-singl-cont {
+    h6 {
+      font-size: 14px;
+      font-weight: 700;
+      text-transform: uppercase;
+      color: $font-primary;
+      margin-top: 20px;
+      margin-bottom: 10px;
+    }
+    p {
+      color: $font-secondary;
+      font-size: 12px;
+      line-height: 22px;
+    }
+
+    .divider {
+      margin-top: 15px;
+      margin-bottom: 15px;
+    }
+    .nav {
+      li {
+        color: $font-secondary;
+        font-size: 14px;
+        margin-left: 20px;
+        font-family: "Roboto", sans-serif;
+        font-style: italic;
+
+        i {
+          color: $color-green;
+          margin-right: 5px;
+        }
+      }
+      li:first-child {
+        margin-left: 0;
+      }
+    }
+  }
+}
+
+// Map section customize
+
+.map-sec {
+  background-image: url(../images/map-bg.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  padding-top: 60px;
+  padding-bottom: 80px;
+}
+
+.map-sec::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(
+    red($color-white),
+    green($color-white),
+    blue($color-white),
+    0.8
+  );
+}
+
+.map-title {
+  z-index: 999;
+  i,
+  h4 {
+    color: $accent-color !important;
+  }
+
+  i {
+    font-size: 26px;
+    margin-bottom: 18px;
+  }
+
+  h4 {
+    font-size: 24px;
+    text-transform: uppercase;
+    font-weight: 700;
+    position: relative;
+  }
+  h4:after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: -20px;
+    transform: translateX(-50%);
+    width: 60px;
+    height: 3px;
+    background-color: $accent-color;
+  }
+}
+
+//footer sectino cusotmize
+
+footer {
+  padding-bottom: 0 !important;
+  background-color: $bg-light;
+}
+
+.ftr-cnt {
+  .navbar-brand {
+    font-size: 40px;
+    line-height: 40px;
+    padding: 0;
+    font-weight: 800;
+    color: lighten($font-secondary, 15%) !important;
+  }
+
+  .ftr-desc {
+    font-size: 12px;
+    color: $font-secondary;
+    line-height: 22px;
+    margin-bottom: 40px;
+    margin-top: 20px;
+  }
+
+  .lk-count {
+    color: $font-primary;
+    font-size: 14px;
+    font-weight: bold;
+    span {
+      font-size: 18px;
+      font-weight: bold;
+    }
+  }
+
+  .divider {
+    margin-top: 12px;
+    margin-bottom: 12px;
+  }
+
+  .ftr-scl-link {
+    li {
+      color: $color-green;
+      font-size: 18px;
+      margin-left: 12px;
+    }
+
+    li:first-child {
+      margin-left: 0;
+      margin-right: 20px;
+      font-size: 16px;
+      font-style: italic;
+      color: $font-secondary;
+    }
+  }
+}
+
+::placeholder {
+  color: $font-secondary !important;
+}
+.ftr-cnt {
+  .ftr-form {
+    margin-top: 30px;
+    input[type="email"] {
+      background-color: $color-white;
+      border: 1px solid $border-color;
+      padding: 10px;
+      color: $font-secondary !important;
+      font-style: italic;
+      font-size: 14px;
+      width: 230px;
+    }
+
+    input[type="submit"] {
+      background-color: $color-green;
+      padding: 13px;
+      border: none;
+      color: $color-white;
+      font-size: 12px;
+      font-weight: bold;
+      margin-left: -5px;
+      transition: all 0.4s ease;
+      width: 150px;
+    }
+
+    input[type="submit"]:hover {
+      background-color: darken($color-green, 15%);
+    }
+  }
+}
+
+.ftr-blog-wrp {
+  margin-top: 40px;
+}
+
+.ftr-blog-title {
+  h6 {
+    font-weight: 14px;
+    font-weight: 700;
+    color: $font-primary !important;
+    text-transform: uppercase;
+  }
+}
+
+.ftr-blog-singl {
+  margin-bottom: 23px;
+  .ftr-blog-cnt {
+    padding-left: 20px;
+    h6 {
+      font-size: 11px;
+      font-weight: 700;
+      color: $font-primary !important;
+      text-transform: uppercase;
+    }
+    p {
+      color: $font-secondary !important;
+      font-size: 14px;
+      font-style: italic;
+      margin-top: 6px;
+    }
+  }
+}
+
+.ftr-insta-title {
+  h6 {
+    font-weight: 14px;
+    font-weight: 700;
+    color: $font-primary !important;
+    text-transform: uppercase;
+  }
+}
+
+.ftr-insta-imgs {
+  margin-top: 40px;
+
+  img {
+    width: 30%;
+    height: auto;
+    margin-bottom: 4px;
+  }
+}
+.ftr-insta {
+  .insta-link {
+    font-size: 14px;
+    color: $font-primary;
+    font-style: italic;
+    display: block;
+    margin-top: 35px;
+    text-decoration: none;
+    transition: all 0.5s ease;
+  }
+
+  .insta-link:hover {
+    color: $font-secondary;
+  }
+}
+
+.ftr-copy {
+  p {
+    font-size: 12px;
+    color: $font-primary;
+    font-weight: 700;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  span {
+    a {
+      color: $accent-color !important;
+      transition: all 0.4s ease;
+      text-decoration: none !important;
+    }
+    a:hover {
+      color: darken($accent-color, 15%) !important;
+    }
+  }
+}
+
+footer .container > .divider {
+  margin-bottom: 0;
+}
