--- a/css/style.css
+++ b/css/style.css
@@ -559,10 +559,17 @@ header {
 .wt-we-do-sec .accordion .collapse {
   padding: 20px;
   border: 1px solid #e5e5e5;
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
 }
 
-.wt-we-do-sec .accordion .collapse .collapse-inr {
+.wt-we-do-sec .accordion .collapsing {
+  border: 1px solid #e5e5e5;
+}
+
+.collapse-inr {
   padding-right: 20px;
+  padding-left: 10px;
   font-size: 12px;
   line-height: 22px;
   color: #999999;
@@ -570,6 +577,8 @@ header {
   height: 132px;
   overflow-x: hidden;
   overflow-y: scroll;
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
 }
 
 .qts-sec,
@@ -601,6 +610,17 @@ header {
   color: #999999;
   font-size: 22px;
   z-index: 999;
+}
+
+.qts-sec .slick-cs-prev:focus,
+.qts-sec .slick-cs-next:focus,
+.qts-sec .slick-cs2-prev:focus,
+.qts-sec .slick-cs2-next:focus,
+.testimoni-sec .slick-cs-prev:focus,
+.testimoni-sec .slick-cs-next:focus,
+.testimoni-sec .slick-cs2-prev:focus,
+.testimoni-sec .slick-cs2-next:focus {
+  outline: none;
 }
 
 .qts-sec .slick-cs-next,
@@ -665,6 +685,11 @@ header {
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
+}
+
+.qts-single:focus,
+.testimoni-single:focus {
+  outline: none;
 }
 
 .testimoni-sec {
@@ -1115,14 +1140,17 @@ footer {
   width: 230px;
 }
 
+.ftr-cnt .ftr-form input:focus {
+  outline: none;
+}
+
 .ftr-cnt .ftr-form input[type="submit"] {
   background-color: #95e1d3;
-  padding: 13px;
+  padding: 12px;
   border: none;
   color: #ffffff;
   font-size: 12px;
   font-weight: bold;
-  margin-left: -5px;
   -webkit-transition: all 0.4s ease;
   transition: all 0.4s ease;
   width: 150px;
